--- a/index.html
+++ b/index.html
@@ -71,17 +71,28 @@
     <main>
       <!-- hero -->
       <section id="hero">
-        <div class="heroAdd">Rico,Sano y Natural</div>
+        <div class="heroAdd" id="rotate">Rico,Sano y Natural</div>
         <div class="hero-container">
           <div class="containerImgs">
-            <img class="img1" src="./assets/img/products/licuados.png" alt="" />
+            <img
+              class="img1"
+              id="img1id"
+              src="./assets/img/products/licuados.png"
+              alt=""
+            />
             <div class="subimg">
               <img
+                id="img2id"
                 class="img2"
                 src="./assets/img/products/ensaladaCesar.png"
                 alt=""
               />
-              <img class="img3" src="./assets/img/products/helado.png" alt="" />
+              <img
+                class="img3"
+                id="img3id"
+                src="./assets/img/products/helado.png"
+                alt=""
+              />
             </div>
             <img
               class="img4"
@@ -225,7 +236,7 @@
     </footer>
 
     <div class="add-modal"></div>
-
+    <script src="./assets/const.js"></script>
     <script src="./assets/data.js"></script>
     <script src="./assets/index.js"></script>
   </body>
